[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Project metadata (PEP 621)
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[project]
name = "python-gitmojis"
version = "0.0.0"
requires-python = ">= 3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit",
]

[tool.setuptools.packages.find]
include = ["gitmojis*"]
where = ["src"]
