[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Project metadata (PEP 621)
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[project]
name = "python-gitmojis"
version = "0.0.0"
requires-python = ">= 3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit",
]
lint = [
  "black",
  "mypy",
  "ruff",
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-custom-exit-code",
  "pytest-mock",
]

[tool.setuptools.packages.find]
include = ["gitmojis*"]
where = ["src"]

# Black
# https://black.readthedocs.io/en/stable/usage_and_configuration/

[tool.black]
line-length = 88
target-version = ["py312", "py311", "py310"]

# Mypy
# https://mypy.readthedocs.io/en/stable/config_file.html

[tool.mypy]
exclude = [
  '^(?:(?!src).)*$',
]
show_error_codes = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

# Ruff
# https://docs.astral.sh/ruff/configuration/
# https://docs.astral.sh/ruff/rules/
# https://docs.astral.sh/ruff/settings/

[tool.ruff]
select = [
  "F",     # pyflakes
  "E",     # pycodestyle (errors)
  "W",     # pycodestyle (warnings)
  "I",     # isort
  "N",     # pep8-naming
  "D",     # pydocstyle
  "B",     # flake8-bugbear
  "A",     # flake8-builtins
  "C4",    # flake8-comprehensions
  "T20",   # flake8-print
  "Q",     # flake8-quotes
  "PTH",   # flake8-use-pathlib
]
ignore = ["E501", "N818", "D1", "D205"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = ["gitmojis"]
