[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Project metadata (PEP 621)
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[project]
name = "python-gitmojis"
version = "1.0.0"
description = "😜 The official Gitmoji Guide in Python projects 🐍"
readme = "README.md"
authors = [
  { name = "Kamil Paduszyński", email = "paduszyk@gmail.com" },
]
keywords = ["emoji", "git", "gitmoji"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">= 3.10"
dependencies = [
  "click>=8.4.2,<9.0.0",
  "requests>=2.34.2,<3.0.0",
]

[project.scripts]
"gitmojis" = "gitmojis.__main__:main"

[dependency-groups]
black = [
  "black>=26.5.1,<27.0.0",
]
dev = [
  { include-group = "black" },
  { include-group = "local" },
  { include-group = "nox" },
  { include-group = "mypy" },
  { include-group = "ruff" },
  { include-group = "test" },
]
local = [
  "pre-commit>=4.6.1,<5.0.0",
]
nox = [
  "nox>=2026.7.11,<2027.0.0",
  "nox-uv>=0.8.0",
]
ruff = [
  "ruff>=0.15.22,<0.16.0",
]
mypy = [
  "mypy>=2.3.0,<3.0.0",
  "types-requests>=2.33.0.20260712,<3.0.0.0",
]
test = [
  "pytest>=9.1.1,<10.0.0",
  "pytest-click>=1.1.0,<2.0.0",
  "pytest-cov>=7.1.0,<8.0.0",
  "pytest-custom-exit-code>=0.3.0,<0.4.0",
  "pytest-mock>=3.15.1,<4.0.0",
]

[tool.setuptools.packages.find]
include = ["gitmojis*"]
where = ["src"]

[tool.setuptools.package-data]
"gitmojis" = ["py.typed", "assets*"]

# Black
# https://black.readthedocs.io/en/stable/usage_and_configuration/

[tool.black]
line-length = 88
target-version = ["py312", "py311", "py310"]

# Mypy
# https://mypy.readthedocs.io/en/stable/config_file.html

[tool.mypy]
exclude = [
  '^(?:(?!src).)*$',
]
show_error_codes = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

# Ruff
# https://docs.astral.sh/ruff/configuration/
# https://docs.astral.sh/ruff/rules/
# https://docs.astral.sh/ruff/settings/

[tool.ruff]
select = [
  "F",     # pyflakes
  "E",     # pycodestyle (errors)
  "W",     # pycodestyle (warnings)
  "I",     # isort
  "N",     # pep8-naming
  "D",     # pydocstyle
  "B",     # flake8-bugbear
  "A",     # flake8-builtins
  "C4",    # flake8-comprehensions
  "T20",   # flake8-print
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "PTH",   # flake8-use-pathlib
]
ignore = ["E501", "N818", "D1", "D205", "PT004", "PT016"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = ["gitmojis"]

# Pytest
# https://docs.pytest.org/en/latest/reference/reference.html#configuration-options

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "-q",
  "--strict-markers",
  "--cov=src/",
  "--cov-branch",
  "--cov-append",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml",
  "--suppress-no-test-exit-code",
]
pythonpath = [".", "src"]
testpaths = ["tests/"]

# Coverage.py
# https://coverage.readthedocs.io/en/latest/config.html

[tool.coverage.report]
exclude_also = [
  "@(abc\\.)?abstractmethod",
  "@overload",
  "class .*\\bProtocol\\):",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if 0:",
  "if self.debug:",
  "if settings.DEBUG",
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
]
